# AdversarialHubness

./: .gitignore  CLI_SDK_SUMMARY.md  DETECTION_IMPROVEMENTS.md  LICENSE  MATHEMATICAL_ANALYSIS.md  README.md  TESTING.md  pyproject.toml  report.html  report.json  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py
benchmarks/: QUICKSTART.md  README.md  WIKIPEDIA_RESULTS.md  create_wikipedia_benchmark.py  generate_query_texts.py  hub_strategies.py  plant_hubs.py  run_benchmark.py  test_aggressive_config.py  test_benchmark_simple.py
benchmarks/configs/: README.md  aggressive.yaml  concept_modality.yaml  default.yaml  method_specific.yaml  multi_index_gold_standard.yaml  multimodal.yaml  no_weights.yaml
benchmarks/data/multimodal/: dataset_info.json  ground_truth.json  metadata.json  query_texts.json
benchmarks/data/test/: dataset_info.json  ground_truth.json  metadata.json
benchmarks/data/wikipedia/: dataset_info.json  ground_truth.json  metadata.json  query_texts.json
benchmarks/data/wikipedia_small/: dataset_info.json  ground_truth.json  metadata.json  query_texts.json
benchmarks/results/demo/: benchmark_results.json  report.html
benchmarks/results/multimodal/: benchmark_results.json  report.html  report.json
benchmarks/results/test/: benchmark_results.json  report.html  report.json
benchmarks/results/test_all_methods/: benchmark_results.json
benchmarks/results/test_all_methods/hybrid/: report.html  (+1 more)
benchmarks/results/test_all_reranking/: benchmark_results.json
benchmarks/results/test_method_specific/: benchmark_results.json
benchmarks/results/test_multimodal/: benchmark_results.json  report.html  report.json
benchmarks/results/test_reranking/: benchmark_results.json
benchmarks/results/test_run/: benchmark_results.json  report.html  report.json
benchmarks/results/wikipedia/: benchmark_results.json  report.html  report.json
benchmarks/scripts/: README.md  create_mscoco_captions_benchmark.py  create_multimodal_benchmark.py  create_wikipedia_benchmark.py  export_adv_hub_mscoco_to_hubscan.py  hub_strategies.py  plant_hubs.py  pretty_print_benchmark_results.py  run_benchmark.py
docs/: CONCEPTS_AND_MODALITIES.md  PLUGINS.md  SDK.md  USAGE.md
examples/: DEMO_SUMMARY.md  README.md  README_DEMO.md  adversarial_hub_demo.py  adversarial_hub_demo_multi_backend.py  custom_ranking_example.py  custom_reranking_example.py  demo_config.yaml  generate_toy_data.py  qdrant_config.yaml  sdk_example.py  toy_config.yaml  toy_metadata.json  weaviate_config.yaml
examples/configs/: pinecone_config.yaml  qdrant_config.yaml  toy_config.yaml  weaviate_config.yaml
examples/data/: toy_metadata.json
examples/demo_data/: chunk_metadata.json
examples/demo_data_multi_backend/: metadata_faiss.json
examples/demo_data_multi_backend/reports_faiss/: report.html  report.json
examples/demos/: adversarial_hub_demo.py  adversarial_hub_demo_multi_backend.py  sdk_example.py
examples/plugins/: custom_detector_example.py  custom_ranking_example.py
examples/scripts/: generate_toy_data.py
hubscan/: __init__.py  cli.py  sdk.py
hubscan/config/: __init__.py  config.py
hubscan/core/: __init__.py  scanner.py
hubscan/core/concepts/: __init__.py  base.py  providers.py
hubscan/core/detectors/: __init__.py  base.py  cluster_spread.py  dedup.py  hubness.py  registry.py  stability.py
hubscan/core/fusion/: __init__.py  diversity.py  late_fusion.py  parallel_retrieval.py
hubscan/core/io/: __init__.py  embeddings.py  faiss_index.py  hybrid_fusion.py  metadata.py  vector_index.py
hubscan/core/metrics/: __init__.py  detection_metrics.py
hubscan/core/modalities/: __init__.py  base.py  resolvers.py
hubscan/core/ranking/: __init__.py  builtin.py
hubscan/core/report/: __init__.py  html_out.py  json_out.py
hubscan/core/reranking/: __init__.py  builtin.py
hubscan/core/sampling/: __init__.py  queries.py
hubscan/core/scoring/: __init__.py  combine.py  thresholds.py
hubscan/utils/: __init__.py  batching.py  logging.py  metrics.py
tests/: PLUGIN_TESTS_README.md  __init__.py  test_adapters.py  test_cli.py  test_cli_validate.py  test_concept_providers.py  test_config.py  test_demo.py  test_detector_plugins.py  test_extract_embeddings.py  test_extract_simple.py  test_hubness.py  test_hubness_concept_modality.py  test_hybrid_search.py  test_integration.py  test_io.py  test_jsonl_adapter.py  test_lexical_detectors.py  test_metrics.py  test_modality_resolvers.py  test_plugin_integration.py  test_ranking_methods.py  test_ranking_plugins.py  test_reranking.py  test_scoring.py  test_sdk.py  test_vector_index.py
(+41 files in other folders)
